--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 ProjectSettings/ProjectSettings.asset
 ProjectSettings/ShaderGraphSettings.asset
+ProjectSettings/ProjectSettings.asset
+ProjectSettings/ShaderGraphSettings.asset
